--- a/Birthday.html
+++ b/Birthday.html
@@ -109,6 +109,27 @@
           width: 120px;
         }
       }
+      @media (max-width: 414px){
+         body {
+          background-repeat: repeat;
+          background-size: 48%;
+        }
+        #card-front {
+          width: 50%;
+          position: absolute;
+          left: 14%;
+        }
+        #card h1 {
+          font-size: 23px;
+        }
+        #card-front {
+          margin-top: 40%;
+        }
+        #rh {
+          width: 110px;
+          margin-left: -3;
+        }
+      }
     </style>
   </head>
   <body>
