--- a/wishes.html
+++ b/wishes.html
@@ -39,6 +39,15 @@
             .main{
                 font-size: 15px;
                 line-height: 1.4em;
+                padding: 2%;
+                margin:6% 0% 0% 6%;
+                width:80%;
+            }
+        }
+        @media (max-width: 414px){
+            .main{
+                font-size: 13px;
+                line-height: 1.4em;
                 padding: ;
                 margin:6% 0% 0% 6%;
                 width:80%;
@@ -48,11 +57,11 @@
   </head>
   <body>
     <div class="main">
-          <p>Hey <b>pgluuuuu</b></p>
+          <p>Hey <b>pgluuuuu,</b></p>
           <p>“Wish you many many happy returns of the day friend,all your dreams come true.</p>
           <p>I didn't expect that i find a person like you in this life &#128519. Sach m yr apto acchi aurat ha, har meri baat sunta ho, muje support kartha ho, whenever i am low u take the step and made me smile and boltha ha ki "i am here why fikar &#128522". 
           ap mujse baat nhi kiya to patha nhi usdin m very low ho jata hu duffer 🥴 You are a true, pure, matured & immatured friend 😏, kabi kabi bhut gusa delata ho 👿 fr ek msg sa sab gayab kartha ho 😇</p>
-          <p>Hello hello, bs bs necha ajao yr, aur upr math jao badal sa tuk rayega &#128541, let me go with you as a friend in this life, otherwise i will die and become ghost👻 aur apko daratha hu 🤪</p>
+          <p>Hello hello, bs bs necha ajao yr, aur upr math jao badal sa tuk rayega &#128541, let me go with you as a friend in this life, otherwise i will die and become boochi 👻 aur apko daratha hu 🤪</p>
           <p>Keep Smiling :)</p>
           <center><h4>Siva Ram</h4></center>
       </div>
