--- a/Birthday.html
+++ b/Birthday.html
@@ -137,13 +137,13 @@
       <div id="card-front">
         <div class="wrap">
           <h1>Happy &#8383;irthday!</h1>
-          <img
+          <!--<img
             id="rh"
             src="rehmat.jpg"
             alt="pic"
             style="border: 1px solid white"
             width="30%"
-          />
+          />-->
         </div>
         <button id="open">&gt;</button>
         <button id="close">&lt;</button>
